--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.3.2",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -62,6 +62,8 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.3.2",
+    "typeface-montserrat": "0.0.75",
+    "typeface-roboto": "0.0.75",
     "url-loader": "^2.0.1"
   }
 }
