--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "nautilus",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "description": "Nautilus Cloud",
-  "author": "Cryptonomic",
+  "author": "Cryptonomic Inc",
   "license": "GPL-3.0",
-  "homepage": "",
+  "homepage": "https://nautilus.cloud",
   "repository": {
     "type": "git",
     "url": "https://github.com/Cryptonomic/Nautilus-Cloud-Ui"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --inline --hot --open",
     "serve": "webpack-dev-server --mode development --inline --hot",
     "build": "webpack --mode development",
@@ -38,7 +37,7 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^5.0.0",
     "jest": "^24.8.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "tslint": "^5.18.0",
@@ -47,7 +46,7 @@
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.7.2",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
