--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "awesome-typescript-loader": "^5.2.1",
         "babel-loader": "^8.1.0",
         "copy-webpack-plugin": "^6.0.2",
+        "csp-html-webpack-plugin": "^4.0.0",
         "css-loader": "^3.5.3",
         "express": "^4.17.1",
         "file-loader": "^6.0.0",
