--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "start-prod": "npm run build && node express.js"
     },
     "devDependencies": {
-        "@babel/cli": "^7.10.1",
+        "@babel/cli": "^7.13.0",
         "@babel/core": "^7.10.2",
         "@babel/preset-env": "^7.10.2",
         "@babel/preset-react": "^7.10.1",
@@ -53,13 +53,15 @@
     "dependencies": {
         "@material-ui/core": "^4.10.1",
         "@material-ui/icons": "^4.9.1",
-        "axios": "^0.19.2",
+        "axios": "^0.21.1",
         "chart.js": "^2.9.3",
+        "jwt-decode": "^3.1.2",
         "react": "^16.13.1",
         "react-chartjs-2": "^2.9.0",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
+        "react-router-redux": "^4.0.8",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
