--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dependencies": {
         "@material-ui/core": "^4.11.3",
         "@material-ui/icons": "^4.9.1",
+        "@stripe/stripe-js": "^1.13.2",
         "axios": "^0.21.1",
         "chart.js": "^2.9.3",
         "jwt-decode": "^3.1.2",
